fix: dark mode background color

--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -12,68 +12,3 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 }
-
-body {
-  background-color: $c-background;
-}
-
-h1,
-h3,
-a {
-  color: $c-title;
-}
-
-h1 {
-  font-size: 3.25rem;
-
-  @include media(tablet) {
-    font-size: 3.375rem;
-  }
-
-  @include media(desktop) {
-    font-size: 3.5rem;
-  }
-}
-
-h3 {
-  font-size: 1.5625rem;
-
-  @include media(tablet) {
-    font-size: 1.6875rem;
-  }
-
-  @include media(desktop) {
-    font-size: 1.8125rem;
-  }
-}
-
-p {
-  color: $c-text;
-
-  line-height: 1.25rem;
-  letter-spacing: 0.08px;
-  font-weight: 500;
-
-  font-size: 0.875rem;
-
-  @include media(tablet) {
-    line-height: 1.5rem;
-    font-size: 1rem;
-  }
-
-  @include media(desktop) {
-    line-height: 1.75rem;
-    font-size: 1.2rem;
-  }
-}
-
-a {
-  line-height: 1.25rem;
-  letter-spacing: 0.01rem;
-  font-weight: 500;
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
