--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,4 +1,3 @@
-$c-background: rgb(0, 0, 0);
 $c-title: hsl(0, 0%, 80%);
 $c-text: rgb(169, 169, 169);
 $c-box: rgb(32, 32, 34);
